# rust-mft-bot

./: Cargo.toml  market_data.parquet
src/: main.rs
